[project]
name = "nettool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "saguirregaray1", email = "saguirregaray1@correo.um.edu.uy" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "psutil>=6.1.1",
    "speedtest-cli>=2.1.3",
    "typer>=0.15.1",
]

[project.scripts]
nettool = "nettool.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
